#maripbekoff 24.02.2020 00:04 *Localization, kazakh lang is main

--- a/kindergarten/ru/discipline.html
+++ b/kindergarten/ru/discipline.html
@@ -8,9 +8,9 @@
     <title>График работы Детского Сада</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/animate.css">
-    <link rel="stylesheet" href="style/discipline.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/animate.css">
+    <link rel="stylesheet" href="../style/discipline.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -42,12 +42,12 @@
     <div id="preloader" class="visible"></div>
 
     <a href="https://wa.me/77010389899" class="whatsapp-unique pulse">
-        <img src="images/whatsapp.png" alt="" width="64">
+        <img src="../images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
+            <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,9 @@
                     <li class="nav-item text-center" id="feedbackBtn">
                         <a class="nav-link" href="index.html">Записаться</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="../index.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png" alt="" width="30">Қаз</a>
+                    </li>  
                 </ul>
             </div>
         </div>
@@ -87,7 +90,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/photo21.jpg" class="card-img" alt="..." height="100%">
+                                <img src="../images/gallery/photo21.jpg" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -106,7 +109,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/photo12.JPG" class="card-img" alt="..." height="100%">
+                                <img src="../images/gallery/photo12.JPG" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -125,7 +128,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/photo1.jpg" class="card-img" alt="..." height="100%">
+                                <img src="../images/gallery/photo1.jpg" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -142,7 +145,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/photo4.jpg" class="card-img" alt="..." height="100%">
+                                <img src="../images/gallery/photo4.jpg" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
