--- a/kindergarten/ru/learning.html
+++ b/kindergarten/ru/learning.html
@@ -8,9 +8,9 @@
     <title>График работы Детского Сада</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/animate.css">
-    <link rel="stylesheet" href="style/learning.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/animate.css">
+    <link rel="stylesheet" href="../style/learning.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -42,12 +42,12 @@
     <div id="preloader" class="visible"></div>
 
     <a href="https://wa.me/77010389899" class="whatsapp-unique pulse">
-        <img src="images/whatsapp.png" alt="" width="64">
+        <img src="../images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
+            <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -68,6 +68,9 @@
                     </li>
                     <li class="nav-item text-center" id="feedbackBtn">
                         <a class="nav-link" href="index.html">Записаться</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="../index.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png" alt="" width="30">Қаз</a>
                     </li>
                 </ul>
             </div>
@@ -132,8 +135,7 @@
                 <p class="timeline-event-thumbnail">11:50 - 12:30</p>
                 <h3>Обед</h3>
                 <p>
-                    Соответствует утвержденному меню на день. Родители могут заранее договориться с воспитателем о
-                    приходе, и попробовать вкусные и полезные блюда наших поваров.
+                    Соответствует утвержденному меню на день.
                 </p>
             </div>
         </li>
@@ -156,7 +158,7 @@
                 <h3>Процедуры</h3>
                 <h4>по очищению</h4>
                 <p>
-                    Дети постепенно просыпаются, после чего проводятся воздушные, ванные процедуры и проветривование
+                    Дети постепенно просыпаются, после чего проводятся воздушные, ванные процедуры и проветривание
                     комнат.
                 </p>
             </div>
