--- a/kindergarten/ru/mind.html
+++ b/kindergarten/ru/mind.html
@@ -8,9 +8,9 @@
     <title>График работы Детского Сада</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/animate.css">
-    <link rel="stylesheet" href="style/mind.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/animate.css">
+    <link rel="stylesheet" href="../style/mind.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
+            <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -68,6 +68,9 @@
                     </li>
                     <li class="nav-item text-center" id="feedbackBtn">
                         <a class="nav-link" href="index.html">Записаться</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="../index.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png" alt="" width="30">Қаз</a>
                     </li>
                 </ul>
             </div>
@@ -100,7 +103,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card border-secondory">
-                        <img src="./images/team/Карибаева Кульдархан.JPG" alt="" class="card-img-top">
+                        <img src="../images/team/Карибаева Кульдархан.JPG" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Карибаева Кульдархан Баймаханқызы</h5>
                             <p class="card-text text-secondary">Заведующая детским садом</p>
@@ -111,7 +114,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card border-secondory">
-                        <img src="./images/team/Медетова Венера.JPG" alt="" class="card-img-top">
+                        <img src="../images/team/Медетова Венера.JPG" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Медетова Венера Амантайқызы</h5>
                             <p class="card-text text-secondary">Методист детского сада</p>
@@ -122,7 +125,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card border-secondory">
-                        <img src="./images/team/Тургамбаева Гульшат.jpg" alt="" class="card-img-top">
+                        <img src="../images/team/Тургамбаева Гульшат.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Тургамбаева Гульшат Даулеткелдіқызы</h5>
                             <p class="card-text text-secondary">Заведующая детским садом</p>
@@ -133,7 +136,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card border-secondory">
-                        <img src="./images/team/Сбаева Сауле.jpg" alt="" class="card-img-top">
+                        <img src="../images/team/Сбаева Сауле.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Сбаева Сауле Спамбаевна</h5>
                             <p class="card-text text-secondary">Медсестра детского сада</p>
@@ -144,7 +147,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card border-secondory">
-                        <img src="./images/team/Каргина Татьяна Борисовна.jpg" alt="" class="card-img-top">
+                        <img src="../images/team/Каргина Татьяна Борисовна.jpg" alt="" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Каргина Татьяна Борисовна</h5>
                             <p class="card-text text-secondary">Бухгалтер детского сада</p>
@@ -164,13 +167,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/gallery/photo22.JPG" class="d-block w-100" alt="...">
+                        <img src="../images/gallery/photo22.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/gallery/photo23.JPG" class="d-block w-100" alt="...">
+                        <img src="../images/gallery/photo23.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/gallery/photo24.JPG" class="d-block w-100" alt="...">
+                        <img src="../images/gallery/photo24.JPG" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -185,6 +188,140 @@
         </div>
     </section>
 
+
+    <!-- DATA -->
+    <div class="modal fade" id="KaribaevaKuldarhan" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalScrollableTitle">Подробнее</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Родилась 23 июня 1961 года. Национальность - казах, образование - высшее. Общий педагогический стаж
+                    - 30 лет, стаж занимаемой должности - 6 лет.<br>
+                    В 1983 году окончила Орден Трудового Красного Знамени Казахского педагогического института им. Абая
+                    по специальности преподаватель физики.<br>
+                    Окончила второе высшее учебное заведение в 2013 году, Казахстанский
+                    инженерно-педагогический университет дружбы народов, по специальности - дошкольное образование и
+                    воспитание.<br>
+                    Трудовую деятельность начала в 1983 году учителем физики в средней школе № 45 г. Алматы. Кроме того,
+                    с 2003 по 2005 год она была учителем физики в гимназии № 147, с 2005 по 2008 год она работала
+                    методистом политехнического цикла в АПК в Жетысуском, Турксибском, Бостандыкском районах Алматы, а с
+                    2008 по 2010 год была учителем физики и заместителем директора в школе № 16.<br>
+                    С сентября 2010 года Кулдархан Баймахановна работает заведующей детским садом № 8 в
+                    Алмалинском районе. В 2013 году она вступила в Международный союз учителей, член Международного
+                    союза учителей, Казахских всемирных творческих сообществ мира.<br>
+                    В 2015 году награждена значком «Заслуженный работник образования Республики Казахстан».
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="MedetovaVenera" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalScrollableTitle">Подробнее</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Родилась в 1985 году в Енбекшиказахском районе Алматинской области.<br>
+                    В 1991 году окончила Жамбылскую среднюю школу, а в 2002 году с отличием.<br>
+                    С 2002 по 2007 год училась в Алматинском технологическом университете. После окончания университета
+                    с
+                    отличием она начала свою карьеру в качестве инженера на кафедре хлебопродуктов в том же
+                    университете.<br>
+                    В 2011-2013 годах окончила Казахский государственный женский педагогический университет по
+                    специальности «история».<br>
+                    Работает клерком и воспитателем в детском саду с февраля 2012 года.<br>
+                    С сентября 2016 года она работает методистом.<br>
+                    В настоящее время продолжает обучение по специальности «Дошкольное воспитание и обучение» в
+                    Южно-Казахстанском педагогическом университете.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="TurgambaevaGulshat" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalScrollableTitle">Подробнее</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Родилась в 1967 году в Панфиловском районе Алматинской области.<br>
+                    В 1980-1987 гг. Окончила ПТУ.<br>
+                    С 2014 года она возглавляет детский сад.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="SbaevaSaule" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalScrollableTitle">Подробнее</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Родилась в 1965 году в селе Талапты Саркантского района Алматинской области.<br>
+                    Закончив школу в том же селе, в 1983 году поступила в Республиканский медицинский колледж
+                    Министерства здравоохранения Казахской ССР, в 1985 году окончила по специальности «Медицинская
+                    сестра».<br>
+                    Трудовую деятельность начала в августе 1985 года в качестве «участковой медсестры».<br>
+                    С марта 2013 года она работает медсестрой и диетологом в детском саду.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="KarginaTatyana" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalScrollableTitle">Подробнее</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Она родилась в 1971 году в Бишкеке. Окончила школу в селе Тайконур Сузакского района
+                    Южно-Казахстанской области, окончила в 1989 году.<br>
+                    В 1990-1995 годах училась в Алматинском институте народного хозяйства по специальности бюджетный
+                    учет и аудит.<br>
+                    С 1994 года работает бухгалтером.<br>
+                    С февраля 2002 года работает главным бухгалтером детского сада №8.
+                </div>  
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- footer start -->
@@ -320,13 +457,14 @@
                     учет и аудит.<br>
                     С 1994 года работает бухгалтером.<br>
                     С февраля 2002 года работает главным бухгалтером детского сада №8.
-                </div>
+                </div>  
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                 </div>
             </div>
         </div>
     </div>
+
 
     <!-- javascript -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
