--- a/kindergarten/ru/growth.html
+++ b/kindergarten/ru/growth.html
@@ -8,9 +8,9 @@
     <title>График работы Детского Сада</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/animate.css">
-    <link rel="stylesheet" href="style/growth.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/animate.css">
+    <link rel="stylesheet" href="../style/growth.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 
 <body>
@@ -42,12 +42,12 @@
     <div id="preloader" class="visible"></div>
 
     <a href="https://wa.me/77010389899" class="whatsapp-unique pulse">
-        <img src="images/whatsapp.png" alt="" width="64">
+        <img src="../images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
+            <a class="navbar-brand" href="index.html"><img src="../images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,9 @@
                     <li class="nav-item text-center" id="feedbackBtn">
                         <a class="nav-link" href="index.html">Записаться</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="../index.html" class="nav-link"><img class="mr-3" src="../images/icons/kazakhstan.png" alt="" width="30">Қаз</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -81,13 +84,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item">
-                        <img src="images/gallery/photo21.jpg" class="d-block w-100" alt="...">
+                        <img src="../images/gallery/photo21.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item active">
-                        <img src="images/gallery/photo12.JPG" class="d-block w-100" alt="...">
+                        <img src="../images/gallery/photo12.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/gallery/photo19.JPG" class="d-block w-100" alt="...">
+                        <img src="../images/gallery/photo19.JPG" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -110,7 +113,7 @@
                 <div class="col-lg-6 pb-5">
                     <div class="row no-gutters rounded overflow-hidden position-relative">
                         <div class="col-auto">
-                            <img src="images/numbers/1.png" alt="" width="100px">
+                            <img src="../images/numbers/1.png" alt="" width="100px">
                         </div>
                         <div class="col pl-3">
                             <h5>Английский</h5>
@@ -124,7 +127,7 @@
                 <div class="col-lg-6">
                     <div class="row no-gutters rounded overflow-hidden position-relative">
                         <div class="col-auto">
-                            <img src="images/numbers/2.png" alt="" width="100px">
+                            <img src="../images/numbers/2.png" alt="" width="100px">
                         </div>
                         <div class="col pl-3">
                             <h5>Хореография</h5>
@@ -144,8 +147,8 @@
     <section class="pb-5">
         <div class="container">
             <div class="row wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <div class="col-md-6">
-                    <img src="images/dance illustration.png" width="100%" alt="Детский сад">
+                <div class="col-md-6 text-center">
+                    <img src="../images/dance illustration.png" width="80%" alt="Детский сад">
                 </div>
                 <div class="col-md-6">
                     <ul class="nav nav-pills m-3 justify-content-center" id="pills-tab" role="tablist p-3">
