--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -8,8 +8,8 @@
     <title>Ясли Сад №8 - Сіздің балаларыңыз үшін ең жақсы орын!</title>
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../style/animate.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/animate.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
