#maripbekoff 24.02.2020 00:13 *Fixed styles

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -19,14 +19,14 @@
 
     <!-- unique button start -->
     <a href="https://wa.me/77010389899" class="whatsapp-unique pulse">
-        <img src="../images/whatsapp.png" alt="" width="64">
+        <img src="images/whatsapp.png" alt="" width="64">
     </a>
     <!-- unique button end -->
 
     <!-- navbar start -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
 
-        <a class="navbar-brand" href="#"><img src="../images/logo.png" width="100"></a>
+        <a class="navbar-brand" href="#"><img src="images/logo.png" width="100"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,7 @@
     <!-- welcome start -->
     <div class="welcome">
         <div class="container text-center pt-5 pb-5">
-            <img src="../images/quote.png" alt="" width="64">
+            <img src="images/quote.png" alt="" width="64">
             <h2>Алғы сөз</h2>
             <p class="w-50 ml-auto mr-auto">Басқадан кем болмас үшін біз білімді, бай һәм күшті болуымыз керек. Күшті
                 болуға бірлік керек. Осы керектердің жолында жұмыс істеуіміз керек</p>
@@ -102,7 +102,7 @@
             <div class="container services pb-5 fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
                 <div class="row">
                     <div class="col-lg-3 mb-5">
-                        <img src="../images/icons/1.png" width="50%" alt="Услуги">
+                        <img src="images/icons/1.png" width="50%" alt="Услуги">
                         <h3>Оқыту</h3>
                         <p>
                             Балабақшада біздің балаларымыз ағылшын және қазақ тілдерімен танысады және шығармашылық өнер сабақтарымен айналысады<br>
@@ -110,7 +110,7 @@
                         <a href="learning.html">Өту ></a>
                     </div>
                     <div class="col-lg-3 mb-5">
-                        <img src="../images/icons/2.jpg" width="50%" alt="Услуги">
+                        <img src="images/icons/2.jpg" width="50%" alt="Услуги">
                         <h3>Даму</h3>
                         <p>
                             Сіздің балаңыздың қажеттіліктеріне қарамастан, біздің бағдарламаларымыздың әрқайсысы қолдау көрсетеді.
@@ -118,7 +118,7 @@
                         <a href="growth.html">Өту ></a>
                     </div>
                     <div class="col-lg-3 mb-5">
-                        <img src="../images/icons/3.png" width="50%" alt="Услуги">
+                        <img src="images/icons/3.png" width="50%" alt="Услуги">
                         <h3>Тәртіп</h3>
                         <p>
                             Біз балаға көп уақыт бөлеміз. Ашық ойындар оларға командаларда қатысып, шығармашылық элементтері бар ойындарды ойнау мүмкіндік береді.
@@ -126,7 +126,7 @@
                         <a href="discipline.html">Өту ></a>
                     </div>
                     <div class="col-lg-3 mb-5">
-                        <img src="../images/icons/4.png" width="50%" alt="Услуги">
+                        <img src="images/icons/4.png" width="50%" alt="Услуги">
                         <h3>Көзқарасымыз</h3>
                         <p>
                            Біз балалар өздерін қауіпсіз сезінетін және әрқашан бақытты болатын, жылы және қамқор атмосфераны құрғымыз келеді.
@@ -157,31 +157,31 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="../images/gallery/photo1.jpg" alt="Первый слайд">
+                            <img class="d-block w-100" src="images/gallery/photo1.jpg" alt="Первый слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo2.jpg" alt="Второй слайд">
+                            <img class="d-block w-100" src="images/gallery/photo2.jpg" alt="Второй слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo3.jpg" alt="Третий слайд">
+                            <img class="d-block w-100" src="images/gallery/photo3.jpg" alt="Третий слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo4.jpg" alt="Четвертый слайд">
+                            <img class="d-block w-100" src="images/gallery/photo4.jpg" alt="Четвертый слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo5.JPG" alt="Пятый слайд">
+                            <img class="d-block w-100" src="images/gallery/photo5.JPG" alt="Пятый слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo6.JPG" alt="Шестый слайд">
+                            <img class="d-block w-100" src="images/gallery/photo6.JPG" alt="Шестый слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo7.jpg" alt="Седьмой слайд">
+                            <img class="d-block w-100" src="images/gallery/photo7.jpg" alt="Седьмой слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo8.JPG" alt="Восьмой слайд">
+                            <img class="d-block w-100" src="images/gallery/photo8.JPG" alt="Восьмой слайд">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/gallery/photo9.jpg" alt="Девятый слайд">
+                            <img class="d-block w-100" src="images/gallery/photo9.jpg" alt="Девятый слайд">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -201,7 +201,7 @@
         <div class="container about pt-5 pb-5 justify-content-center">
             <div class="row" data-wow-duration="0.5s" data-wow-delay="0.5s">
                 <div class="col-md-6 wow fadeInUp">
-                    <img src="../images/illustration.jpg" width="100%" alt="Детский сад">
+                    <img src="images/illustration.jpg" width="100%" alt="Детский сад">
                 </div>
                 <div class="col-md-6 wow fadeInDown">
                     <ul class="nav nav-pills mb-3 m-3 justify-content-center" id="pills-tab" role="tablist p-3">
@@ -244,7 +244,7 @@
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
-                                <img src="../images/numbers/1.png" alt="" width="100px">
+                                <img src="images/numbers/1.png" alt="" width="100px">
                             </div>
                             <div class="col">
                                 <h5>Таңертеңгі жаттығу</h5>
@@ -257,7 +257,7 @@
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
-                                <img src="../images/numbers/2.png" alt="" width="100px">
+                                <img src="images/numbers/2.png" alt="" width="100px">
                             </div>
                             <div class="col">
                                 <h5>Қызметі</h5>
@@ -270,7 +270,7 @@
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
-                                <img src="../images/numbers/3.png" alt="" width="100px">
+                                <img src="images/numbers/3.png" alt="" width="100px">
                             </div>
                             <div class="col">
                                 <h5>Тамақтану</h5>
@@ -283,7 +283,7 @@
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
-                                <img src="../images/numbers/4.png" alt="" width="100px">
+                                <img src="images/numbers/4.png" alt="" width="100px">
                             </div>
                             <div class="col">
                                 <h5>Серуендеу</h5>
@@ -296,7 +296,7 @@
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
-                                <img src="../images/numbers/5.png" alt="" width="100px">
+                                <img src="images/numbers/5.png" alt="" width="100px">
                             </div>
                             <div class="col">
                                 <h5>Салауатты ұйқы</h5>
@@ -309,7 +309,7 @@
                     <div class="col-md-4">
                         <div class="row no-gutters rounded overflow-hidden position-relative">
                             <div class="col-auto">
-                                <img src="../images/numbers/6.png" alt="" width="100px">
+                                <img src="images/numbers/6.png" alt="" width="100px">
                             </div>
                             <div class="col">
                                 <h5>Процедуралар</h5>
